--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <div class="categoria-filmes">
             <a href="https://www.youtube.com/watch?v=V9PVRfjEBTI">
                 <img src="https://img.youtube.com/vi/V9PVRfjEBTI/maxresdefault.jpg" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=UvBs11tyJNE">
-                <img src="https://img.youtube.com/vi/UvBs11tyJNE/maxresdefault.jpg" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=l4qTHELOBdw">
-                <img src="https://img.youtube.com/vi/l4qTHELOBdw/maxresdefault.jpg" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=5pcWuecE0-E">
-                <img src="https://img.youtube.com/vi/5pcWuecE0-E/maxresdefault.jpg" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=ydJopzst_pc">
-                <img src="https://img.youtube.com/vi/ydJopzst_pc/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=cF1Na4AIecM">
+                <img src="https://img.youtube.com/vi/cF1Na4AIecM/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=H5v3kku4y6Q">
+                <img src="https://img.youtube.com/vi/H5v3kku4y6Q/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=ekr2nIex040>
+                <img src="https://img.youtube.com/vi/ekr2nIex040/maxresdefault.jpg" alt=""></a>
+            <a href="https://www.youtube.com/watch?v=gset79KMmt0">
+                <img src="https://img.youtube.com/vi/gset79KMmt0/maxresdefault.jpg" alt=""></a>
         </div>
     </section>
     <script src="script.js"></script>
