--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="https://img.youtube.com/vi/cF1Na4AIecM/maxresdefault.jpg" alt=""></a>
             <a href="https://www.youtube.com/watch?v=H5v3kku4y6Q">
                 <img src="https://img.youtube.com/vi/H5v3kku4y6Q/maxresdefault.jpg" alt=""></a>
-            <a href="https://www.youtube.com/watch?v=ekr2nIex040>
+            <a href="https://www.youtube.com/watch?v=ekr2nIex040">
                 <img src="https://img.youtube.com/vi/ekr2nIex040/maxresdefault.jpg" alt=""></a>
             <a href="https://www.youtube.com/watch?v=gset79KMmt0">
                 <img src="https://img.youtube.com/vi/gset79KMmt0/maxresdefault.jpg" alt=""></a>
