--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section class="categoria">
         <div class="categoria-subtitulo">
-            <h2>Filmes e Séries</h2>
-            <button id="toggle-button">Mostrar/Esconder Filmes</button>
+            <h2>Filmes e músicas</h2>
+            <button id="toggle-button">Mostrar/Esconder Filmes e músicas</button>
         </div>
         <div class="categoria-filmes">
             <a href="https://www.youtube.com/watch?v=V9PVRfjEBTI">
